--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Untitled</title>
-  <link rel="stylesheet" href="./style.css">
+  
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-HTML File (index.html)
+1️⃣ HTML File (index.html)
 
 <!DOCTYPE html>
 
@@ -36,9 +36,9 @@ HTML File (index.html)
 
     <input type="file" id="uploadBtn" accept="image/*">
 
-    <h1>MONISH.R</h1>
+    <h1>BALAJI.V</h1>
 
-    <p>BSC COMPUTER SCIENCE </p>
+    <p>COMPUTER SCIENCE STUDENT</p>
 
   </header>
 
@@ -138,7 +138,7 @@ HTML File (index.html)
 
 ---
 
-CSS File (style.css)
+2️⃣ CSS File (style.css)
 
 body {
 
@@ -242,7 +242,7 @@ h2 {
 
 ---
 
-JavaScript File (script.js)
+3️⃣ JavaScript File (script.js)
 
 document.getElementById("uploadBtn").addEventListener("change", previewPhoto);
 
@@ -264,7 +264,7 @@ function previewPhoto(event) {
 
 ---
 
-Now your project is clean:
+✅ Now your project is clean:
 
 index.html → HTML structure only
 
@@ -274,7 +274,6 @@ script.js → JavaScript logic
 
 Do you also want me to add responsiveness (mobile-friendly design with media queries) in the CSS so it looks good on phones?
 <!-- partial -->
-  <script  src="./script.js"></script>
-
+  
 </body>
 </html>
